--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,14 +7,14 @@
     android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.cc.stepview.MainActivity">
+    tools:context="com.cc.custom.MainActivity">
 
-    <com.cc.stepview.edittext.TXEditText
+    <com.cc.custom.edittext.TXEditText
         android:layout_width="match_parent"
         android:layout_height="48dp"
         app:limitLength="3" />
 
-    <com.cc.stepview.stepview.StepView
+    <com.cc.custom.stepview.StepView
         android:id="@+id/stepView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -36,7 +36,7 @@
     <!--app:statusTextSize="12sp"-->
     <!--app:textSpace="8dp" />-->
 
-    <com.cc.stepview.chart.LineChartView2
+    <com.cc.custom.chart.LineChartView2
         android:id="@+id/lineChart"
         android:layout_width="match_parent"
         android:layout_height="200dp" />
