评分View：添加状态保存，添加注释等

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -62,6 +62,7 @@
         android:visibility="gone" />
 
     <com.cc.custom.rating.TXRatingView
+        android:id="@+id/hh"
         app:ratingSize="32dp"
         app:itemSpace="4dp"
         app:maxRating="5"
