评分view支持滑动改变分数

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -63,6 +63,7 @@
 
     <com.cc.custom.rating.TXRatingView
         android:id="@+id/hh"
+        android:layout_marginLeft="50dp"
         app:ratingSize="32dp"
         app:itemSpace="4dp"
         app:maxRating="5"
