--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,6 +3,6 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
 
-    <dimen name="tx_rating_item_size">48dp</dimen>
-    <dimen name="tx_rating_item_space">4dp</dimen>
+    <dimen name="tx_rating_item_default_size">48dp</dimen>
+    <dimen name="tx_rating_item_default_space">4dp</dimen>
 </resources>
