--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,10 @@
 
     <dimen name="tx_rating_item_default_size">48dp</dimen>
     <dimen name="tx_rating_item_default_space">4dp</dimen>
+
+    <dimen name="tx_rating_hint_text_size">12sp</dimen>
+    <dimen name="tx_rating_text_size">14sp</dimen>
+    <dimen name="tx_rating_value_text_size">30sp</dimen>
+    <dimen name="tx_rating_header_height">64dp</dimen>
+    <dimen name="tx_rating_text_space">20dp</dimen>
 </resources>
