--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,6 +9,12 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.cc.custom.MainActivity">
 
+    <Button
+        android:id="@+id/btn_vp"
+        android:layout_width="wrap_content"
+        android:layout_height="40dp"
+        android:text="ViewPager" />
+
     <com.cc.custom.edittext.TXEditText
         android:layout_width="match_parent"
         android:layout_height="48dp"
