--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,6 +33,24 @@
             android:text="StepView" />
     </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/btn_video"
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            android:text="VideoEdit" />
+
+        <Button
+            android:id="@+id/btn_ndk"
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            android:text="NDK_JNI" />
+    </LinearLayout>
+
     <com.cc.custom.edittext.TXEditText
         android:layout_width="match_parent"
         android:layout_height="48dp"
