--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -49,6 +49,12 @@
             android:layout_width="wrap_content"
             android:layout_height="40dp"
             android:text="NDK_JNI" />
+
+        <Button
+            android:id="@+id/btn_open_gl"
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            android:text="OPEN_GL" />
     </LinearLayout>
 
     <com.cc.custom.edittext.TXEditText
