--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -11,4 +11,8 @@
     <dimen name="tx_rating_value_text_size">30sp</dimen>
     <dimen name="tx_rating_header_height">64dp</dimen>
     <dimen name="tx_rating_text_space">20dp</dimen>
+    
+    <dimen name="tx_frame_height">50dp</dimen>
+    <dimen name="tx_range_seek_bar_padding">50dp</dimen>
+    
 </resources>
