--- a/app/src/main/res/layout/activity_seek_demo.xml
+++ b/app/src/main/res/layout/activity_seek_demo.xml
@@ -1,35 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:seekbar="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/TX_CO_BLACK"
     android:orientation="vertical">
 
-    <com.cc.custom.seek.RangeSeekbar
-        android:id="@+id/seekbar"
+    <VideoView
+        android:id="@+id/videoView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="300dp"
+        android:layout_gravity="center"
         android:layout_marginLeft="30dp"
-        android:layout_marginRight="30dp"
-        seekbar:leftCursorBackground="@drawable/left_cursor_bg"
-        seekbar:markTextArray="@array/markArray"
-        seekbar:rightCursorBackground="@drawable/left_cursor_bg"
-        seekbar:spaceBetween="40dp"
-        seekbar:textSize="15dp" />
-
-    <Button
-        android:id="@+id/set_left"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="set left" />
-
-    <Button
-        android:id="@+id/set_right"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="set right" />
-
+        android:layout_marginRight="30dp" />
 
     <com.cc.custom.seek.TXFrameSeekBar
         android:id="@+id/frameBar"
