--- a/app/src/main/res/layout/tx_layout_seek_bar.xml
+++ b/app/src/main/res/layout/tx_layout_seek_bar.xml
@@ -6,14 +6,22 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv"
         android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:clipToPadding="false"
+        android:overScrollMode="never"
         android:paddingLeft="50dp"
-        android:paddingRight="50dp"
-        android:layout_height="50dp" />
+        android:paddingRight="50dp" />
 
-    <com.cc.custom.seek.TXRangeSeekBar
-        android:id="@+id/seekBar"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:paddingLeft="50dp"
-        android:paddingRight="50dp"
-        android:layout_height="50dp" />
+        android:layout_height="50dp"
+        android:orientation="vertical">
+
+        <com.cc.custom.seek.TXRangeSeekBar
+            android:id="@+id/seekBar"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:paddingLeft="50dp"
+            android:paddingRight="50dp" />
+    </LinearLayout>
 </RelativeLayout>
