--- a/app/src/main/res/layout/tx_layout_seek_bar.xml
+++ b/app/src/main/res/layout/tx_layout_seek_bar.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="50dp">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv"
@@ -11,6 +11,14 @@
         android:overScrollMode="never"
         android:paddingLeft="50dp"
         android:paddingRight="50dp" />
+
+    <ImageView
+        android:id="@+id/iv_position"
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
+        android:layout_centerVertical="true"
+        android:layout_marginLeft="50dp"
+        android:src="@drawable/lf_ugc_publish_pos" />
 
     <LinearLayout
         android:layout_width="match_parent"
