--- a/app/src/main/res/layout/activity_seek_demo.xml
+++ b/app/src/main/res/layout/activity_seek_demo.xml
@@ -19,11 +19,32 @@
         android:layout_height="50dp"
         android:layout_marginTop="50dp" />
 
-    <com.cc.custom.seek.TXRangeSeekBar2
-        android:id="@+id/rangeBar2"
+    <!--<com.cc.custom.seek.TXRangeSeekBar2-->
+        <!--android:id="@+id/rangeBar2"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="50dp"-->
+        <!--android:layout_marginTop="50dp"-->
+        <!--android:paddingLeft="50dp"-->
+        <!--android:paddingRight="50dp" />-->
+
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
         android:layout_marginTop="50dp"
-        android:paddingLeft="50dp"
-        android:paddingRight="50dp" />
+        android:layout_height="50dp">
+
+        <com.cc.custom.seek.TXFrameView
+            android:id="@+id/frameView"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:paddingLeft="50dp"
+            android:paddingRight="50dp" />
+
+        <com.cc.custom.seek.TXRangeSeekBar3
+            android:id="@+id/rangBar3"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:paddingLeft="50dp"
+            android:paddingRight="50dp" />
+    </RelativeLayout>
+
 </LinearLayout>
