--- a/app/src/main/res/layout/activity_seek_demo.xml
+++ b/app/src/main/res/layout/activity_seek_demo.xml
@@ -41,13 +41,26 @@
         android:layout_above="@id/rl_content"
         android:layout_marginTop="50dp" />
 
-    <VideoView
-        android:id="@+id/videoView"
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@id/frameBar"
-        android:layout_gravity="center"
-        android:layout_marginLeft="30dp"
-        android:layout_marginRight="30dp" />
+        android:layout_margin="10dp">
+
+        <VideoView
+            android:id="@+id/videoView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_centerInParent="true" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@id/videoView"
+            android:layout_alignRight="@id/videoView"
+            android:text="00:50"
+            android:textColor="@color/TX_CO_WHITE"
+            android:textSize="18sp" />
+    </RelativeLayout>
 
 </RelativeLayout>
