--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -76,23 +76,48 @@
     </declare-styleable>
 
     <declare-styleable name="NumberProgressBar">
-        <attr name="progress_current" format="integer"/>
-        <attr name="progress_max" format="integer"/>
+        <attr name="progress_current" format="integer" />
+        <attr name="progress_max" format="integer" />
 
-        <attr name="progress_unreached_color" format="color"/>
-        <attr name="progress_reached_color" format="color"/>
+        <attr name="progress_unreached_color" format="color" />
+        <attr name="progress_reached_color" format="color" />
 
-        <attr name="progress_reached_bar_height" format="dimension"/>
-        <attr name="progress_unreached_bar_height" format="dimension"/>
+        <attr name="progress_reached_bar_height" format="dimension" />
+        <attr name="progress_unreached_bar_height" format="dimension" />
 
-        <attr name="progress_text_size" format="dimension"/>
-        <attr name="progress_text_color" format="color"/>
+        <attr name="progress_text_size" format="dimension" />
+        <attr name="progress_text_color" format="color" />
 
-        <attr name="progress_text_offset" format="dimension"/>
+        <attr name="progress_text_offset" format="dimension" />
 
         <attr name="progress_text_visibility" format="enum">
-            <enum name="visible" value="0"/>
-            <enum name="invisible" value="1"/>
+            <enum name="visible" value="0" />
+            <enum name="invisible" value="1" />
         </attr>
+    </declare-styleable>
+
+    <declare-styleable name="TXThreeTextView">
+        <attr name="firstTextColor" format="color" />
+        <attr name="secondTextColor" format="color" />
+        <attr name="thirdTextColor" format="color" />
+        <attr name="firstTextSize" format="dimension" />
+        <attr name="secondTextSize" format="dimension" />
+        <attr name="thirdTextSize" format="dimension" />
+        <attr name="firstText" format="string" />
+        <attr name="secondText" format="string" />
+        <attr name="thirdText" format="string" />
+        <attr name="autoType">
+            <flag name="one" value="0x01" />
+            <flag name="two" value="0x02" />
+        </attr>
+        <attr name="ellipsisType">
+            <flag name="first" value="0x01" />
+            <flag name="second" value="0x02" />
+            <flag name="firstAndThird" value="0x03" />
+            <flag name="firstAndSecond" value="0x04" />
+            <flag name="secondAndThird" value="0x05" />
+        </attr>
+        <attr name="firstSpace" format="dimension" />
+        <attr name="secondSpace" format="dimension" />
     </declare-styleable>
 </resources>
